PR17126: put hcall_* kernel tracepoints into blacklist for powerpc

* tapsets.cxx (tracepoint_query::handle_query_func): Implement
  baby blacklist.